[package]
name = "file_database"
version = "0.1.2"
edition = "2024"
description = "A local filesystem database with ID based file and directory management."
license = "MIT"
readme = "readme.md"
documentation = "https://docs.rs/file_database"
keywords = ["filesystem", "database", "files", "paths", "manager"]
include = ["src/lib.rs", "Cargo.toml", "Cargo.lock", "readme.md"]

[dependencies]
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
